--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "antd": "^4.16.13",
     "axios": "^0.21.4",
     "body-parser": "^1.19.0",
+    "bootstrap": "^3.3.7",
+    "content-security-policy": "^0.3.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "^17.0.2",
+    "react-iifc": "^1.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
