--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-paginate": "^7.1.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-typical": "^0.1.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
